# cal-white

./: 1.txt  CMakeLists.txt  README.md
src/: cal_white.rc  image_process.cc  image_process.h  image_view.cc  image_view.h  main.cc  main_widget.cc  main_widget.h
